--- a/app/src/main/res/values-v31/colors.xml
+++ b/app/src/main/res/values-v31/colors.xml
@@ -14,4 +14,10 @@
     <color name="SnackbarBackground">@android:color/system_accent1_800</color>
     <color name="SnackbarForeground">@android:color/system_accent1_100</color>
     <color name="white">#FFF</color>
+    <color name="ActiveButtonBackground">@android:color/system_accent1_100</color>
+    <color name="ActiveButtonForeground">@android:color/system_accent1_600</color>
+    <color name="PassiveButtonBackground">@android:color/system_accent1_600</color>
+    <color name="PassiveButtonForeground">@android:color/system_accent1_100</color>
+    <color name="MonetViewBackground">@android:color/system_accent1_700</color>
+    <color name="CookedHWColors">@android:color/system_accent1_10</color>
 </resources>
