--- a/app/src/main/res/layout/profile_view.xml
+++ b/app/src/main/res/layout/profile_view.xml
@@ -4,18 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/profilePopup"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#70000000"
+    android:layout_height="wrap_content"
+    android:animateLayoutChanges="true"
+    android:background="#00000000"
     android:padding="0dp">
-
-    <View
-        android:id="@+id/BackgroundTouch"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
