--- a/app/src/main/res/values-v31/colors.xml
+++ b/app/src/main/res/values-v31/colors.xml
@@ -20,4 +20,5 @@
     <color name="PassiveButtonForeground">@android:color/system_accent1_100</color>
     <color name="MonetViewBackground">@android:color/system_accent1_700</color>
     <color name="CookedHWColors">@android:color/system_accent1_10</color>
+    <color name="PopupBackgroundTint">#70000000</color>
 </resources>
