--- a/app/src/main/res/layout/profile_view.xml
+++ b/app/src/main/res/layout/profile_view.xml
@@ -35,16 +35,44 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/ActiveButtonForeground"
-            android:text="Заблокировать профиль"
-            android:textColor="#FFFFFF" />
+            android:padding="10dp"
+            android:text="Включить блокировку входа"
+            android:textColor="#FFFFFF"
+            app:cornerRadius="10dp" />
 
-        <Button
-            android:id="@+id/ExitButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/MonetViewBackground"
-            android:text="Выйти"
-            android:textColor="#FFFFFF" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/ExitButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/MonetViewBackground"
+                android:padding="20dp"
+                android:text="Выйти"
+                android:textColor="#FFFFFF"
+                app:cornerRadius="15dp"
+                app:icon="@drawable/exit_logo"
+                app:iconPadding="2dp"
+                app:iconTint="@color/ActiveButtonBackground" />
+
+            <Button
+                android:id="@+id/closeBtn"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginLeft="8dp"
+                android:backgroundTint="@color/PassiveButtonBackground"
+                android:padding="0dp"
+                android:text="Закрыть окно"
+                android:textColor="#FFFFFF"
+                app:cornerRadius="12dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/ExitButton"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
