--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -157,7 +157,7 @@
         android:layout_margin="4dp"
         android:background="@drawable/acc_info_background"
         android:padding="4dp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -715,6 +715,73 @@
         android:background="@color/PopupBackgroundTint"
         android:onClick="CloseProfilePopup"
         android:text=""
-        android:visibility="gone" />
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:visibility="visible" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/EnterProfilePin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:background="@drawable/pin_bg"
+        android:padding="14dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible">
+
+        <TextView
+            android:id="@+id/TextPinEnter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Введите PIN:"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/PinInput"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/pin_input_bg"
+            android:ems="10"
+            android:inputType="numberPassword"
+            android:maxLength="6"
+            android:padding="10dp"
+            app:layout_constraintCircleRadius="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/TextPinEnter" />
+
+        <ProgressBar
+            android:id="@+id/PinCheckingStatus"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:indeterminateTint="@color/CheckboxColor"
+            android:padding="4dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/PinInput"
+            app:layout_constraintEnd_toEndOf="@+id/PinInput"
+            app:layout_constraintTop_toTopOf="@+id/PinInput" />
+
+        <Button
+            android:id="@+id/ContinueButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/ActiveButtonBackground"
+            android:onClick="ContinuePINCheck"
+            android:text="OK"
+            android:textColor="@color/MonetViewBackground"
+            app:cornerRadius="10dp"
+            app:layout_constraintEnd_toEndOf="@+id/PinInput"
+            app:layout_constraintStart_toStartOf="@+id/PinInput"
+            app:layout_constraintTop_toBottomOf="@+id/PinInput" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
