--- a/app/src/main/res/layout/profile_view.xml
+++ b/app/src/main/res/layout/profile_view.xml
@@ -32,6 +32,42 @@
             android:textStyle="bold" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/PinNotIserted"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp">
+
+            <TextView
+                android:id="@+id/PinLocked"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bgtext_highlight_part2"
+                android:paddingRight="5dp"
+                android:text="Введите PIN для серверных функций"
+                android:textColor="#FFFFFF"
+                app:layout_constraintStart_toEndOf="@+id/PinLockImage" />
+
+            <ImageView
+                android:id="@+id/PinLockImage"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:adjustViewBounds="true"
+                android:background="@drawable/bgtext_highlight_part1"
+                android:maxWidth="30dp"
+                android:padding="3dp"
+                android:paddingLeft="6dp"
+                android:paddingRight="6dp"
+                android:scaleType="centerInside"
+                android:tint="#F06E6E"
+                app:layout_constraintBottom_toBottomOf="@+id/PinLocked"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/warn" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/PinState"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="8dp">
@@ -64,6 +100,21 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <Button
+            android:id="@+id/EnterPinAction"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/ActiveButtonForeground"
+            android:padding="14dp"
+            android:text="Ввести PIN"
+            android:textColor="#FFFFFF"
+            android:visibility="visible"
+            app:cornerRadius="10dp"
+            app:icon="@drawable/pin_panel"
+            app:iconGravity="textStart"
+            app:iconPadding="4dp"
+            app:iconTint="@color/ActiveButtonBackground" />
+
+        <Button
             android:id="@+id/LockProfile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -71,6 +122,7 @@
             android:padding="14dp"
             android:text="Включить блокировку входа"
             android:textColor="#FFFFFF"
+            android:visibility="visible"
             app:cornerRadius="10dp"
             app:icon="@drawable/lock"
             app:iconGravity="textStart"
@@ -83,6 +135,7 @@
             android:background="@color/MonetViewBackground" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
