--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -203,7 +203,7 @@
             android:id="@+id/Logout"
             android:layout_width="38dp"
             android:layout_height="38dp"
-            android:layout_marginRight="4dp"
+            android:layout_marginRight="6dp"
             android:background="@android:color/transparent"
             android:onClick="ShowProfilePopup"
             android:scaleType="centerCrop"
@@ -718,8 +718,7 @@
         android:text=""
         android:translationZ="5dp"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:visibility="visible" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/EnterProfilePin"
@@ -733,8 +732,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/TextPinEnter"
