--- a/app/src/main/res/layout/profile_view.xml
+++ b/app/src/main/res/layout/profile_view.xml
@@ -161,7 +161,23 @@
             app:cornerRadius="10dp"
             app:icon="@drawable/lock"
             app:iconGravity="textStart"
-            app:iconTint="@color/ActiveButtonBackground" />
+            app:iconTint="@color/ActiveButtonBackground"
+            tools:visibility="visible" />
+
+        <Button
+            android:id="@+id/RemoteProfileUnlock"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/ActiveButtonForeground"
+            android:padding="14dp"
+            android:text="Войти в аккаунт на ПК"
+            android:textColor="#FFFFFF"
+            android:visibility="gone"
+            app:cornerRadius="10dp"
+            app:icon="@drawable/login"
+            app:iconGravity="textStart"
+            app:iconTint="@color/ActiveButtonBackground"
+            tools:visibility="visible" />
 
         <View
             android:id="@+id/divider"
