--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -117,7 +117,7 @@
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/progressBar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.constraintlayout.widget.Group
@@ -169,7 +169,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:text="FullNameText"
+            android:text="Имя и Фамилия"
             android:textColor="@color/NotTitledTextLite"
             android:textSize="14sp"
             android:textStyle="bold"
@@ -182,7 +182,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="5dp"
-            android:text="GroupName"
+            android:text="Имя Группы"
             android:textColor="#E7E7E7"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/AccPhoto"
@@ -563,7 +563,7 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/SheduleSection"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_margin="4dp"
                     android:animateLayoutChanges="true"
                     android:background="@drawable/section_border"
@@ -616,7 +616,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:onClick="SelectDayViaCalendar"
-                        android:text="CurrentDate"
+                        android:text="Текущая дата"
                         android:textColor="@color/PassiveButtonForeground"
                         app:layout_constraintBottom_toBottomOf="@+id/PreviousDayShedule"
                         app:layout_constraintEnd_toStartOf="@+id/NextDayShedule"
@@ -638,7 +638,8 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recyclerView"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_marginTop="4dp"
                         app:layout_constraintTop_toBottomOf="@+id/PreviousDayShedule"
                         tools:layout_editor_absoluteX="8dp">
 
